# ds_project

./: NEWS.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/dsproject/: __init__.py
src/dsproject/app/: app.py  run_dsproject.py
src/dsproject/ingestion/: download.py
src/dsproject/plot/: plot_ts.py
src/dsproject/utils/: get_current_date.py
tests/: test_sum.py
tests/ingestion/: test_download_data.py
