[project]
name = "dsproject"
version = "0.1.0.9002"
description = "A complete DS/MLOps project."
authors = [
    {name = "Samuel Macêdo",email = "svm.macedo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
pandas = "^2.3.3"
plotly = "^6.4.0"
yfinance = "^0.2.66"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.25.2"
ipython = "<8.16.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
